--- a/extensions/value-list/blocks/value-bullets.liquid
+++ b/extensions/value-list/blocks/value-bullets.liquid
@@ -99,36 +99,36 @@ programming in a for loop would be a paid due to poorly structured data from sch
 </div>
 
 
-{% schema %}
+\{% schema %}
   {
-    "name": "Value icons",
+    "name": "t:blocks.value-bullets.name",
     "target": "section",
     "settings": [
       {
         "type": "paragraph",
-        "content": "Use this section to display 1-5 value propositions with optional icons. You can also add a background to this section."
+        "content": "t:blocks.value-bullets.paragraph-1.content"
       },
       {
         "type": "header",
-        "content": "General settings",
-        "info": "Style settings that are applied to the entire section"
+        "content": "t:blocks.value-bullets.header-1.content",
+        "info": "t:blocks.value-bullets.header-1.info"
       },
       {
         "type": "checkbox",
         "id": "as-bullets",
-        "label": "Display as bullets",
-        "info": "Each value and icon gets a full line",
+        "label": "t:blocks.value-bullets.as-bullets.label",
+        "info": "t:blocks.value-bullets.as-bullets.info",
         "default": true
       },
       {
         "type": "color",
         "id": "value-color",
-        "label": "Text color",
+        "label": "t:blocks.value-bullets.value-color.label",
         "default": "#000000"
       }, {
         "type": "range",
         "id": "value-text-size",
-        "label": "Text size",
+        "label": "t:blocks.value-bullets.value-text-size.label",
         "min": 0.2,
         "max": 3,
         "step": 0.2,
@@ -137,11 +137,11 @@ programming in a for loop would be a paid due to poorly structured data from sch
       }, {
         "type": "color",
         "id": "background-color",
-        "label": "Background color"
+        "label": "t:blocks.value-bullets.background-color.label"
       }, {
         "type": "range",
         "id": "background-corner-radius",
-        "label": "Background corner radius",
+        "label": "t:blocks.value-bullets.background-corner-radius.label",
         "min": 0,
         "max": 25,
         "step": 1,
@@ -150,7 +150,7 @@ programming in a for loop would be a paid due to poorly structured data from sch
       }, {
         "type": "range",
         "id": "background-padding",
-        "label": "Background padding",
+        "label": "t:blocks.value-bullets.background-padding.label",
         "min": 0,
         "max": 2,
         "step": 0.2,
@@ -158,12 +158,12 @@ programming in a for loop would be a paid due to poorly structured data from sch
         "unit": "em"
       }, {
         "type": "header",
-        "content": "Add value propositions",
-        "info": "To not display a value prop, leave the text field blank. Icons are optional."
+        "content": "t:blocks.value-bullets.header-2.content",
+        "info": "t:blocks.value-bullets.header-2.info"
       }, {
         "type": "range",
         "id": "icon-size",
-        "label": "Icon size",
+        "label": "t:blocks.value-bullets.icon-size.label",
         "min": 5,
         "max": 110,
         "step": 5,
@@ -172,8 +172,8 @@ programming in a for loop would be a paid due to poorly structured data from sch
       }, {
         "type": "range",
         "id": "value-padding-between",
-        "label": "Space between value propositions",
-        "info": "Only applies if you have set more than one value.",
+        "label": "t:blocks.value-bullets.value-padding-between.label",
+        "info": "t:blocks.value-bullets.value-padding-between.info",
         "min": 0,
         "max": 2,
         "step": 0.2,
@@ -181,16 +181,16 @@ programming in a for loop would be a paid due to poorly structured data from sch
         "unit": "em"
       }, {
         "type": "header",
-        "content": "Value prop 1"
+        "content": "t:blocks.value-bullets.value-header-1.content"
       }, {
         "type": "image_picker",
         "id": "value-image-1",
-        "label": "Icon for value prop 1"
+        "label": "t:blocks.value-bullets.value-image-1.label"
       }, {
         "type": "text",
         "id": "value-text-1",
-        "label": "Text for value prop 1",
-        "default": "Value 1"
+        "label": "t:blocks.value-bullets.value-text-1.label",
+        "default": "Text 1"
       }, {
         "type": "header",
         "content": "Value prop 2"
@@ -202,35 +202,35 @@ programming in a for loop would be a paid due to poorly structured data from sch
         "type": "text",
         "id": "value-text-2",
         "label": "Text for value prop 2",
-        "default": "Value 2"
+        "default": "Text 2"
       }, {
         "type": "header",
-        "content": "Value prop 3"
+        "content": "t:blocks.value-bullets.value-header-3.content"
       }, {
         "type": "image_picker",
         "id": "value-image-3",
-        "label": "Icon for value prop 3"
+        "label": "t:blocks.value-bullets.value-image-3.label"
       }, {
         "type": "text",
         "id": "value-text-3",
-        "label": "Icon for value prop 3",
-        "default": "Value 3"
+        "label": "t:blocks.value-bullets.value-text-3.label",
+        "default": "Text 3"
       }, {
         "type": "image_picker",
         "id": "value-image-4",
-        "label": "Icon for value prop 4 "
+        "label": "t:blocks.value-bullets.value-image-4.label"
       }, {
         "type": "text",
         "id": "value-text-4",
-        "label": "Text for value prop 4"
+        "label": "t:blocks.value-bullets.value-text-4.label"
       }, {
         "type": "image_picker",
         "id": "value-image-5",
-        "label": "Icon for value prop 5"
+        "label": "t:blocks.value-bullets.value-image-5.label"
       }, {
         "type": "text",
         "id": "value-text-5",
-        "label": "Text for value prop 5"
+        "label": "t:blocks.value-bullets.value-text-5.label"
       }
     ]
   }
