made code more modular

--- a/extensions/value-list/blocks/value-bullets.liquid
+++ b/extensions/value-list/blocks/value-bullets.liquid
@@ -1,237 +1,202 @@
-{% assign blockId = "css-block-" | append: block.id %}
+{% assign block_id = 'css-block-' | append: block.id %}
 
-{% if block.settings.as-bullets %}
-
-  <style>
-    /* @prettify-ignore-start */
-    #{{ blockId }} .value-container {
-      display: flex;
-      align-items: center;
-    }
-    #{{ blockId }} .value-padding-between {
-      padding-top: {{ block.settings.value-padding-between }}em;
-    }
-    #{{ blockId }} .value-prop-text {
-      min-width: 0;
-      overflow-wrap: break-word; 
-    }
-    #{{ blockId }} .value-image {
-      margin-right: 0.8em;
-    }
-/* @prettify-ignore-end */</style>
-
-{% else %}
-
-  <style>
-    /* @prettify-ignore-start */
-      #{{ blockId }} .value-bg-flex-wrapper {
-        display: flex;
-        align-items: flex-start;
-        gap: {{ block.settings.value-padding-between }}em
-      }
-      #{{ blockId }} .value-container {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        /* related to value-bg-flex-wrapper */
-        flex: 1;
-        min-width: 0;
-      }
-      #{{ blockId }} .value-prop-text {
-        overflow-wrap: anywhere; 
-        min-width: 0;
-      }
-      #{{ blockId }} .value-image {
-        margin-bottom: 0.2em;
-      }
-      #{{ blockId }} .fourfive {
-        display: none;
-      }
-  /* @prettify-ignore-end */</style>
-
-{% endif %}
-
-<style>
-  /* @prettify-ignore-start */
-  #{{ blockId }} .background {
-    background-color: {{ block.settings.background-color }};
-    border-radius: {{ block.settings.background-corner-radius }}px;
-    padding: {{ block.settings.background-padding }}em;
-  }
-  #{{ blockId }} .value-prop-text {
-      color: {{ block.settings.value-color }};    
-      font-size: {{ block.settings.value-text-size }}em;
-  }
-/* @prettify-ignore-end */</style>
+{% render 'styling', block_id: block_id, settings: block.settings %}
 
 {% comment %}
-programming in a for loop would be a paid due to poorly structured data from schema tags
-{% endcomment %}{% assign icon_size = block.settings.icon-size %}
-<div id={{ blockId }}>
+  programming in a for loop would be a paid due to poorly structured data from schema tags
+{% endcomment %}
+{%- assign icon_size = block.settings['icon-size'] %}
+<div id="{{ block_id }}">
   <div class="background value-bg-flex-wrapper">
-    {% render 'value-component'
-     , text: block.settings.value-text-1,
-     image: block.settings.value-image-1,
-     icon-size: icon_size,
-     first-block: true %}
+    {% render 'value-component',
+      text: block.settings['value-text-1'],
+      image: block.settings['value-image-1'],
+      icon_size: icon_size,
+      first_block: true
+    %}
 
-    {% render 'value-component'
-     , text: block.settings.value-text-2,
-     image: block.settings.value-image-2,
-     icon-size: icon_size, %}
+    {%
+      render 'value-component'
+      , text: block.settings.['value-text-2'],
+      image: block.settings.['value-image-2'],
+      icon_size: icon_size,
+    %}
 
-    {% render 'value-component'
-     , text: block.settings.value-text-3,
-     image: block.settings.value-image-3,
-     icon-size: icon_size, %}
+    {%
+      render 'value-component'
+      , text: block.settings.['value-text-3'],
+      image: block.settings.['value-image-3'],
+      icon_size: icon_size,
+    %}
 
-    {% render 'value-component'
-     , text: block.settings.value-text-4,
-     image: block.settings.value-image-4,
-     icon-size: icon_size, %}
+    {%
+      render 'value-component'
+      , text: block.settings.['value-text-4'],
+      image: block.settings.['value-image-4'],
+      icon_size: icon_size,
+    %}
 
-    {% render 'value-component'
-     , text: block.settings.value-text-5,
-     image: block.settings.value-image-5,
-     icon-size: icon_size %}
-
+    {% render 'value-component',
+      text: block.settings['value-text-5'],
+      image: block.settings['value-image-5'],
+      icon_size: icon_size
+    %}
   </div>
 </div>
 
-
-\{% schema %}
-  {
-    "name": "t:blocks.value-bullets.name",
-    "target": "section",
-    "settings": [
-      {
-        "type": "paragraph",
-        "content": "t:blocks.value-bullets.paragraph-1.content"
-      },
-      {
-        "type": "header",
-        "content": "t:blocks.value-bullets.header-1.content",
-        "info": "t:blocks.value-bullets.header-1.info"
-      },
-      {
-        "type": "checkbox",
-        "id": "as-bullets",
-        "label": "t:blocks.value-bullets.as-bullets.label",
-        "info": "t:blocks.value-bullets.as-bullets.info",
-        "default": true
-      },
-      {
-        "type": "color",
-        "id": "value-color",
-        "label": "t:blocks.value-bullets.value-color.label",
-        "default": "#000000"
-      }, {
-        "type": "range",
-        "id": "value-text-size",
-        "label": "t:blocks.value-bullets.value-text-size.label",
-        "min": 0.2,
-        "max": 3,
-        "step": 0.2,
-        "default": 1,
-        "unit": "em"
-      }, {
-        "type": "color",
-        "id": "background-color",
-        "label": "t:blocks.value-bullets.background-color.label"
-      }, {
-        "type": "range",
-        "id": "background-corner-radius",
-        "label": "t:blocks.value-bullets.background-corner-radius.label",
-        "min": 0,
-        "max": 25,
-        "step": 1,
-        "default": 10,
-        "unit": "px"
-      }, {
-        "type": "range",
-        "id": "background-padding",
-        "label": "t:blocks.value-bullets.background-padding.label",
-        "min": 0,
-        "max": 2,
-        "step": 0.2,
-        "default": 0,
-        "unit": "em"
-      }, {
-        "type": "header",
-        "content": "t:blocks.value-bullets.header-2.content",
-        "info": "t:blocks.value-bullets.header-2.info"
-      }, {
-        "type": "range",
-        "id": "icon-size",
-        "label": "t:blocks.value-bullets.icon-size.label",
-        "min": 5,
-        "max": 110,
-        "step": 5,
-        "default": 40,
-        "unit": "px"
-      }, {
-        "type": "range",
-        "id": "value-padding-between",
-        "label": "t:blocks.value-bullets.value-padding-between.label",
-        "info": "t:blocks.value-bullets.value-padding-between.info",
-        "min": 0,
-        "max": 2,
-        "step": 0.2,
-        "default": 1,
-        "unit": "em"
-      }, {
-        "type": "header",
-        "content": "t:blocks.value-bullets.value-header-1.content"
-      }, {
-        "type": "image_picker",
-        "id": "value-image-1",
-        "label": "t:blocks.value-bullets.value-image-1.label"
-      }, {
-        "type": "text",
-        "id": "value-text-1",
-        "label": "t:blocks.value-bullets.value-text-1.label",
-        "default": "Text 1"
-      }, {
-        "type": "header",
-        "content": "Value prop 2"
-      }, {
-        "type": "image_picker",
-        "id": "value-image-2",
-        "label": "Icon for value prop 2"
-      }, {
-        "type": "text",
-        "id": "value-text-2",
-        "label": "Text for value prop 2",
-        "default": "Text 2"
-      }, {
-        "type": "header",
-        "content": "t:blocks.value-bullets.value-header-3.content"
-      }, {
-        "type": "image_picker",
-        "id": "value-image-3",
-        "label": "t:blocks.value-bullets.value-image-3.label"
-      }, {
-        "type": "text",
-        "id": "value-text-3",
-        "label": "t:blocks.value-bullets.value-text-3.label",
-        "default": "Text 3"
-      }, {
-        "type": "image_picker",
-        "id": "value-image-4",
-        "label": "t:blocks.value-bullets.value-image-4.label"
-      }, {
-        "type": "text",
-        "id": "value-text-4",
-        "label": "t:blocks.value-bullets.value-text-4.label"
-      }, {
-        "type": "image_picker",
-        "id": "value-image-5",
-        "label": "t:blocks.value-bullets.value-image-5.label"
-      }, {
-        "type": "text",
-        "id": "value-text-5",
-        "label": "t:blocks.value-bullets.value-text-5.label"
-      }
-    ]
-  }
+{% schema %}
+{
+  "name": "t:blocks.value-bullets.png-name",
+  "target": "section",
+  "settings": [
+    {
+      "type": "paragraph",
+      "content": "t:blocks.value-bullets.paragraph-1.content"
+    },
+    {
+      "type": "header",
+      "content": "t:blocks.value-bullets.header-1.content",
+      "info": "t:blocks.value-bullets.header-1.info"
+    },
+    {
+      "type": "checkbox",
+      "id": "as-bullets",
+      "label": "t:blocks.value-bullets.as-bullets.label",
+      "info": "t:blocks.value-bullets.as-bullets.info",
+      "default": true
+    },
+    {
+      "type": "color",
+      "id": "value-color",
+      "label": "t:blocks.value-bullets.value-color.label",
+      "default": "#000000"
+    },
+    {
+      "type": "range",
+      "id": "value-text-size",
+      "label": "t:blocks.value-bullets.value-text-size.label",
+      "min": 0.2,
+      "max": 3,
+      "step": 0.2,
+      "default": 1,
+      "unit": "em"
+    },
+    {
+      "type": "color",
+      "id": "background-color",
+      "label": "t:blocks.value-bullets.background-color.label"
+    },
+    {
+      "type": "range",
+      "id": "background-corner-radius",
+      "label": "t:blocks.value-bullets.background-corner-radius.label",
+      "min": 0,
+      "max": 25,
+      "step": 1,
+      "default": 10,
+      "unit": "px"
+    },
+    {
+      "type": "range",
+      "id": "background-padding",
+      "label": "t:blocks.value-bullets.background-padding.label",
+      "min": 0,
+      "max": 2,
+      "step": 0.2,
+      "default": 0,
+      "unit": "em"
+    },
+    {
+      "type": "header",
+      "content": "t:blocks.value-bullets.header-2.content",
+      "info": "t:blocks.value-bullets.header-2.info"
+    },
+    {
+      "type": "range",
+      "id": "icon-size",
+      "label": "t:blocks.value-bullets.icon-size.label",
+      "min": 5,
+      "max": 110,
+      "step": 5,
+      "default": 40,
+      "unit": "px"
+    },
+    {
+      "type": "range",
+      "id": "value-padding-between",
+      "label": "t:blocks.value-bullets.value-padding-between.label",
+      "info": "t:blocks.value-bullets.value-padding-between.info",
+      "min": 0,
+      "max": 2,
+      "step": 0.2,
+      "default": 1,
+      "unit": "em"
+    },
+    {
+      "type": "header",
+      "content": "t:blocks.value-bullets.value-header-1.content"
+    },
+    {
+      "type": "image_picker",
+      "id": "value-image-1",
+      "label": "t:blocks.value-bullets.value-image-1.label"
+    },
+    {
+      "type": "text",
+      "id": "value-text-1",
+      "label": "t:blocks.value-bullets.value-text-1.label",
+      "default": "Text 1"
+    },
+    {
+      "type": "header",
+      "content": "t:blocks.value-bullets.value-header-2.content"
+    },
+    {
+      "type": "image_picker",
+      "id": "value-image-2",
+      "label": "t:blocks.value-bullets.value-image-2.label"
+    },
+    {
+      "type": "text",
+      "id": "value-text-2",
+      "label": "t:blocks.value-bullets.value-text-2.label",
+      "default": "Text 2"
+    },
+    {
+      "type": "header",
+      "content": "t:blocks.value-bullets.value-header-3.content"
+    },
+    {
+      "type": "image_picker",
+      "id": "value-image-3",
+      "label": "t:blocks.value-bullets.value-image-3.label"
+    },
+    {
+      "type": "text",
+      "id": "value-text-3",
+      "label": "t:blocks.value-bullets.value-text-3.label",
+      "default": "Text 3"
+    },
+    {
+      "type": "image_picker",
+      "id": "value-image-4",
+      "label": "t:blocks.value-bullets.value-image-4.label"
+    },
+    {
+      "type": "text",
+      "id": "value-text-4",
+      "label": "t:blocks.value-bullets.value-text-4.label"
+    },
+    {
+      "type": "image_picker",
+      "id": "value-image-5",
+      "label": "t:blocks.value-bullets.value-image-5.label"
+    },
+    {
+      "type": "text",
+      "id": "value-text-5",
+      "label": "t:blocks.value-bullets.value-text-5.label"
+    }
+  ]
+}
 {% endschema %}
