--- a/extensions/value-list/snippets/value-component.liquid
+++ b/extensions/value-list/snippets/value-component.liquid
@@ -1,5 +1,5 @@
 {% comment %}
-  needs to have props text, icon_size, image(optional), first_block (optional, defalt functionality as false)
+  needs to have props text, icon_size, image(optional), svg_code (optional), first_block (optional, defalt functionality as false)
 {% endcomment %}
 
 {% assign padding_class = 'value-padding-between' %}
@@ -7,18 +7,22 @@
   {% assign padding_class = '' %}
 {% endif %}
 
-{% unless text == empty %}
-  <div class="value-container {{ padding_class }}">
-    {% if image %}
-      <img
-        src="{{ image |  image_url: width: '200', height: '200' }}"
-        width="{{ icon_size }}"
-        height="{{ icon_size }}"
-        class="value-image"
-      >
-    {% endif %}
+<div class="value-container {{ padding_class }}">
+  {% if image %}
+    <img
+      src="{{ image |  image_url: width: '150', height: '150' }}"
+      width="{{ icon_size }}"
+      height="{{ icon_size }}"
+      class="value-image"
+    >
+  {% elsif svg_code %}
+    <div class="svg-wrapper">
+      {{ svg_code }}
+    </div>
+  {% endif %}
+  {% unless text == empty %}
     <div class="value-prop-text">
       {{ text }}
     </div>
-  </div>
-{% endunless %}
+  {% endunless %}
+</div>
