added alt tag for image icons

--- a/extensions/value-list/snippets/value-component.liquid
+++ b/extensions/value-list/snippets/value-component.liquid
@@ -14,6 +14,7 @@
       width="{{ icon_size }}"
       height="{{ icon_size }}"
       class="value-image"
+      alt="{{ image.alt }}"
     >
   {% elsif svg_code %}
     <div class="svg-wrapper">
