fixed bugs from introducing svg

--- a/extensions/value-list/snippets/styling.liquid
+++ b/extensions/value-list/snippets/styling.liquid
@@ -50,6 +50,9 @@
     #{{ block_id }} .fourfive {
       display: none;
     }
+    #{{ block_id }} .svg-wrapper {
+      margin-bottom: 0.2em;
+    }
   </style>
 {% endif %}
 
