modified shopify build styling suggestions

--- a/extensions/value-list/blocks/value-bullets.liquid
+++ b/extensions/value-list/blocks/value-bullets.liquid
@@ -1,11 +1,13 @@
-{% assign block_id = 'css-block-' | append: block.id %}
+{% liquid 
+  assign block_id = 'css-block-' | append: block.id
+  assign icon_size = block.settings['icon-size']
+%}
 
 {% render 'styling', block_id: block_id, settings: block.settings %}
 
 {% comment %}
   programming in a for loop would be a paid due to poorly structured data from schema tags
 {% endcomment %}
-{%- assign icon_size = block.settings['icon-size'] %}
 <div id="{{ block_id }}">
   <div class="background value-bg-flex-wrapper">
     {% render 'value-component',
