fixed styling bug

--- a/extensions/value-list/snippets/styling.liquid
+++ b/extensions/value-list/snippets/styling.liquid
@@ -43,6 +43,7 @@
     #{{ block_id }} .value-prop-text {
       overflow-wrap: anywhere;
       min-width: 0;
+      text-align: center;
     }
     #{{ block_id }} .value-image {
       margin-bottom: 0.2em;
